--- a/.github/workflows/fetch-fixtures.yml
+++ b/.github/workflows/fetch-fixtures.yml
@@ -8,6 +8,10 @@ on:
   # Allow manual trigger from Actions tab
   workflow_dispatch:
 
+# Add write permissions for the workflow
+permissions:
+  contents: write
+
 jobs:
   fetch-fixtures:
     runs-on: ubuntu-latest
